fix spacing

--- a/style/main.css
+++ b/style/main.css
@@ -64,20 +64,19 @@ body {
 }
 
 .work-page {
-  width: 100vw;
-  height: 270vh;
+  width: 100%;
   display: flex;
   flex-direction: column;
-  /*justify-content: space-around;*/
+  justify-content: space-around;
   background-color: rgba(0, 0, 0, 0.8);
 }
 
 .work-title {
   display: flex;
-  font-size: 40px;
+  font-size: 3em;
   color: white;
   position: relative;
-  top: 100px;
+  margin: 1em 0;
   align-items: center;
   justify-content: center;
   font-family: "Montserrat", sans-serif;
@@ -189,8 +188,7 @@ body {
 /*About Page*/
 
 .about-page {
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
   color: black;
   display: flex;
   flex-direction: column;
@@ -210,17 +208,17 @@ body {
   /* height: 45%; */
   object-fit: cover;
   border-radius: 20px;
+  overflow: hidden;
 }
 
 .profile {
   display: flex;
   line-height: 1.5;
   text-indent: 30px;
-  width: 50%;
-  height: 50%;
+  width: 70%;
   margin-left: 50px;
   margin-top: 150px;
-  font-size: 20px;
+  font-size: 1.5em;
   font-family: "Montserrat", sans-serif;
   background-color: rgba(255, 255, 255, 0.8);
   border-radius: 10px;
@@ -326,6 +324,7 @@ body {
   position: relative;
   width: 15vw;
   height: 50px;
+  font-size: 1.2em;
   justify-content: space-between;
   align-items: center;
 }
